--- a/cool_sites.html
+++ b/cool_sites.html
@@ -21,7 +21,26 @@
   </header>
   
   <main>
-	<p>main</p>
+	  <h1>Homepage</h1>
+	<section>
+		<h2>Favorites</h2>
+		<dl>
+			<h3>Weather</h3>
+			<dt></dt>
+			<dd>
+				<a href="https://forecast.weather.gov/MapClick.php?lat=30.13&lon=-95.44&lg=english&&FcstType=digital" title="Weather data for Spring, TX" target="_blank">
+					https://forecast.weather.gov
+				</a>
+			</dd>
+			<h3>Social</h3>
+			<dt>Reddit</dt>
+			<dd>
+				<a href="https://www.reddit.com" title="reddit" target="_blank">
+					https://www.reddit.com
+				</a>
+			</dd>
+		</dl>
+	</section>
   </main>
   
   <footer>
