Added social media

--- a/cool_sites.html
+++ b/cool_sites.html
@@ -39,6 +39,24 @@
 					https://www.reddit.com
 				</a>
 			</dd>
+			<dt>Twitter</dt>
+			<dd>
+				<a href="https://www.twitter.com" title="twitter" target="_blank">
+					https://www.instagram.com
+				</a>
+			</dd>
+			<dt>Instagram</dt>
+			<dd>
+				<a href="https://www.instagram.com" title="instagram" target="_blank">
+					https://www.instagram.com
+				</a>
+			</dd>
+			<dt>LinkedIn</dt>
+			<dd>
+				<a href="https://www.linkedin.com/in/christopher-flippo/" title="linked in" target="_blank">
+					https://www.linkedin.com
+				</a>
+			</dd>
 		</dl>
 	</section>
   </main>
