Added streaming sites

--- a/cool_sites.html
+++ b/cool_sites.html
@@ -57,6 +57,37 @@
 					https://www.linkedin.com
 				</a>
 			</dd>
+			<h3>Streaming</h3>
+			<dt>YouTube</dt>
+			<dd>
+				<a href="https://www.youtube.com" title="youtube" target="_blank">
+					https://www.youtube.com
+				</a>
+			</dd>
+			<dt>Paramount+</dt>
+			<dd>
+				<a href="https://www.paramountplus.com" title="paramount plus" target="_blank">
+					https://www.paramountplus.com
+				</a>
+			</dd>
+			<dt>Netflix</dt>
+			<dd>
+				<a href="https://www.netflix.com" title="netflix" target="_blank">
+					https://www.netflix.com
+				</a>
+			</dd>
+			<dt>Disney+</dt>
+			<dd>
+				<a href="https://www.disneyplus.com" title="disney plus" target="_blank">
+					https://www.disneyplus.com
+				</a>
+			</dd>
+			<dt>Twitch</dt>
+			<dd>
+				<a href="https://www.twitch.com" title="twitch" target="_blank">
+					https://www.twitch.com
+				</a>
+			</dd>
 		</dl>
 	</section>
   </main>
