Added more sites and enhanced formatting; completed footer

--- a/cool_sites.html
+++ b/cool_sites.html
@@ -22,78 +22,146 @@
   
   <main>
 	  <h1>Homepage</h1>
-	<section>
-		<h2>Favorites</h2>
-		<dl>
-			<h3>Weather</h3>
-			<dt></dt>
-			<dd>
-				<a href="https://forecast.weather.gov/MapClick.php?lat=30.13&lon=-95.44&lg=english&&FcstType=digital" title="Weather data for Spring, TX" target="_blank">
-					https://forecast.weather.gov
-				</a>
-			</dd>
-			<h3>Social</h3>
-			<dt>Reddit</dt>
-			<dd>
-				<a href="https://www.reddit.com" title="reddit" target="_blank">
-					https://www.reddit.com
-				</a>
-			</dd>
-			<dt>Twitter</dt>
-			<dd>
-				<a href="https://www.twitter.com" title="twitter" target="_blank">
-					https://www.instagram.com
-				</a>
-			</dd>
-			<dt>Instagram</dt>
-			<dd>
-				<a href="https://www.instagram.com" title="instagram" target="_blank">
-					https://www.instagram.com
-				</a>
-			</dd>
-			<dt>LinkedIn</dt>
-			<dd>
-				<a href="https://www.linkedin.com/in/christopher-flippo/" title="linked in" target="_blank">
-					https://www.linkedin.com
-				</a>
-			</dd>
-			<h3>Streaming</h3>
-			<dt>YouTube</dt>
-			<dd>
-				<a href="https://www.youtube.com" title="youtube" target="_blank">
-					https://www.youtube.com
-				</a>
-			</dd>
-			<dt>Paramount+</dt>
-			<dd>
-				<a href="https://www.paramountplus.com" title="paramount plus" target="_blank">
-					https://www.paramountplus.com
-				</a>
-			</dd>
-			<dt>Netflix</dt>
-			<dd>
-				<a href="https://www.netflix.com" title="netflix" target="_blank">
-					https://www.netflix.com
-				</a>
-			</dd>
-			<dt>Disney+</dt>
-			<dd>
-				<a href="https://www.disneyplus.com" title="disney plus" target="_blank">
-					https://www.disneyplus.com
-				</a>
-			</dd>
-			<dt>Twitch</dt>
-			<dd>
-				<a href="https://www.twitch.com" title="twitch" target="_blank">
-					https://www.twitch.com
-				</a>
-			</dd>
-		</dl>
+	<section id="superContainer">
+		<section id="container1">
+			<h2>Favorites</h2>
+			<dl>
+				<h3>Weather</h3>
+				<dt></dt>
+				<dd>
+					<a href="https://forecast.weather.gov/MapClick.php?lat=30.13&lon=-95.44&lg=english&&FcstType=digital" title="Weather data for Spring, TX" target="_blank">
+						https://forecast.weather.gov
+					</a>
+				</dd>
+				<h3>Social</h3>
+				<dt>Reddit</dt>
+				<dd>
+					<a href="https://www.reddit.com" title="reddit" target="_blank">
+						https://www.reddit.com
+					</a>
+				</dd>
+				<dt>Twitter</dt>
+				<dd>
+					<a href="https://www.twitter.com" title="twitter" target="_blank">
+						https://www.instagram.com
+					</a>
+				</dd>
+				<dt>Instagram</dt>
+				<dd>
+					<a href="https://www.instagram.com" title="instagram" target="_blank">
+						https://www.instagram.com
+					</a>
+				</dd>
+				<dt>LinkedIn</dt>
+				<dd>
+					<a href="https://www.linkedin.com/in/christopher-flippo/" title="linked in" target="_blank">
+						https://www.linkedin.com
+					</a>
+				</dd>
+				<h3>Streaming</h3>
+				<dt>YouTube</dt>
+				<dd>
+					<a href="https://www.youtube.com" title="youtube" target="_blank">
+						https://www.youtube.com
+					</a>
+				</dd>
+				<dt>Paramount+</dt>
+				<dd>
+					<a href="https://www.paramountplus.com" title="paramount plus" target="_blank">
+						https://www.paramountplus.com
+					</a>
+				</dd>
+				<dt>Netflix</dt>
+				<dd>
+					<a href="https://www.netflix.com" title="netflix" target="_blank">
+						https://www.netflix.com
+					</a>
+				</dd>
+				<dt>Disney+</dt>
+				<dd>
+					<a href="https://www.disneyplus.com" title="disney plus" target="_blank">
+						https://www.disneyplus.com
+					</a>
+				</dd>
+				<dt>Twitch</dt>
+				<dd>
+					<a href="https://www.twitch.com" title="twitch" target="_blank">
+						https://www.twitch.com
+					</a>
+				</dd>
+				<h3>Academics</h3>
+				<dt>Dallas College</dt>
+				<dd>
+					<a href="https://www1.dcccd.edu/catalog/programs/degree.cfm?degree=soft_prog_dev_aas&loc=econ" title="blackboard" target="_blank">
+						https://www1.dcccd.edu
+					</a>
+				</dd>
+				<dt>Blackboard</dt>
+				<dd>
+					<a href="https://dcccd.blackboard.com/ultra/course" title="blackboard" target="_blank">
+						https://dcccd.blackboard.com
+					</a>
+				</dd>
+				<dt>EConnect</dt>
+				<dd>
+					<a href="https://econnect.dcccd.edu/eConnect/eConnect" title="e connect" target="_blank">
+						https://econnect.dcccd.edu
+					</a>
+				</dd>
+				<dt>Netflix</dt>
+				<dd>
+					<a href="https://www.netflix.com" title="netflix" target="_blank">
+						https://www.netflix.com
+					</a>
+				</dd>
+				<dt>Oregon State</dt>
+				<dd>
+					<a href="https://discover.oregonstate.edu/account/login" title="oregon state university" target="_blank">
+						https://discover.oregonstate.edu
+					</a>
+				</dd>
+				
+			</dl>
+		</section>
+		<section id="container2">
+			<h2></h2>
+			<dl>
+				<h3>Programming & Development</h3>
+				<dt>GitHub</dt>
+				<dd>
+					<a href="https://github.com/1ChrisAF?tab=repositories" title="git hub" target="_blank">
+						https://github.com
+					</a>
+				</dd>
+				<dt>DevDocs</dt>
+				<dd>
+					<a href="https://devdocs.io/" title="dev docs" target="_blank">
+						https://devdocs.io/
+					</a>
+				</dd>
+				<dt>FreeCodeCamp</dt>
+				<dd>
+					<a href="https://www.freecodecamp.org/learn" title="dev docs" target="_blank">
+						https://www.freecodecamp.org
+					</a>
+				</dd>
+				<dt>SoloLearn</dt>
+				<dd>
+					<a href="https://www.sololearn.com/profile/22074901" title="solo learn" target="_blank">
+						https://www.sololearn.com
+					</a>
+				</dd>
+			</dl>
+		</section>
+		<section id="container3">
+
+		</section>	
 	</section>
   </main>
   
   <footer>
-	<p>footer</p>
+	<p>&copy; 2022 Christopher Allen Flippo | GNU General Public License v3.0 | <a href="https://github.com/1ChrisAF/Homepage-Project" style="color: blue;
+		text-decoration: none;" title="git hub page for project" target="_blank">GitHub Repo</a></p>
   </footer>
 </body>
 </html>
