--- a/cool_sites.html
+++ b/cool_sites.html
@@ -120,7 +120,12 @@
 						https://discover.oregonstate.edu
 					</a>
 				</dd>
-				
+				<dt>Sam Houston State</dt>
+				<dd>
+					<a href="https://mysam.shsu.edu/all-users/" title="sam houston state university" target="_blank">
+						https://mysam.shsu.edu
+					</a>
+				</dd>
 			</dl>
 		</section>
 		<section id="container2">
@@ -136,7 +141,7 @@
 				<dt>DevDocs</dt>
 				<dd>
 					<a href="https://devdocs.io/" title="dev docs" target="_blank">
-						https://devdocs.io/
+						https://devdocs.io
 					</a>
 				</dd>
 				<dt>FreeCodeCamp</dt>
@@ -149,6 +154,31 @@
 				<dd>
 					<a href="https://www.sololearn.com/profile/22074901" title="solo learn" target="_blank">
 						https://www.sololearn.com
+					</a>
+				</dd>
+				<h3>Learning</h3>
+				<dt>Duolingo</dt>
+				<dd>
+					<a href="https://www.duolingo.com/learn" title="duolingo" target="_blank">
+						https://www.duolingo.com
+					</a>
+				</dd>
+				<dt>Coursera</dt>
+				<dd>
+					<a href="https://www.coursera.org/user/b7342f3631303adde336844d6dec15af" title="coursera" target="_blank">
+						https://www.coursera.org
+					</a>
+				</dd>
+				<dt>Udemy</dt>
+				<dd>
+					<a href="https://www.udemy.com/user/chris-1659/" title="udemy" target="_blank">
+						https://www.udemy.com
+					</a>
+				</dd>
+				<dt>Kindle Reader</dt>
+				<dd>
+					<a href="https://read.amazon.com/" title="kindle online reader" target="_blank">
+						https://read.amazon.com
 					</a>
 				</dd>
 			</dl>
