Link corrections and slight format edit

--- a/alt/cool_sites.html
+++ b/alt/cool_sites.html
@@ -411,12 +411,13 @@
 		margin: 0 1em .5em;
 	}
 	main h1 {
-		padding: 0 0 0 2em;
-		font-variant: small-caps;
-		font-style: italic;
-		color: #198c8c;
-		text-shadow: 2px 2px 0 black;
-	}
+    padding: 0 0 0 4em;
+    font-size: 3em;
+    font-variant: small-caps;
+    font-style: italic;
+    color: #198c8c;
+    text-shadow: 2px 2px 0 black;
+  }
 	/* 
 	main section {
 		column-count: 2;
@@ -610,7 +611,7 @@
 				</dd>
 				<dt>FreeCodeCamp</dt>
 				<dd>
-					<a href="https://www.freecodecamp.org/learn" title="dev docs" target="_blank">
+					<a href="https://www.freecodecamp.org/fcccfd11bf6-91d2-44c3-b504-53207305af6f" title="dev docs" target="_blank">
 						https://www.freecodecamp.org
 					</a>
 				</dd>
