--- a/cool_sites.html
+++ b/cool_sites.html
@@ -21,7 +21,7 @@
   </header>
   
   <main>
-	  <h1>Homepage</h1>
+	<h1>Homepage</h1>
 	<section id="superContainer">
 		<section id="container1">
 			<h2>Favorites</h2>
@@ -146,7 +146,7 @@
 				</dd>
 				<dt>FreeCodeCamp</dt>
 				<dd>
-					<a href="https://www.freecodecamp.org/learn" title="dev docs" target="_blank">
+					<a href="https://www.freecodecamp.org/fcccfd11bf6-91d2-44c3-b504-53207305af6f" title="dev docs" target="_blank">
 						https://www.freecodecamp.org
 					</a>
 				</dd>
