--- a/cool_sites.html
+++ b/cool_sites.html
@@ -83,6 +83,12 @@
 						https://www.disneyplus.com
 					</a>
 				</dd>
+				<dt>Hulu</dt>
+				<dd>
+					<a href="https://www.hulu.com" title="hulu" target="_blank">
+						https://www.hulu.com
+					</a>
+				</dd> 
 				<dt>Twitch</dt>
 				<dd>
 					<a href="https://www.twitch.com" title="twitch" target="_blank">
