--- a/alt/cool_sites.html
+++ b/alt/cool_sites.html
@@ -609,6 +609,18 @@
 						https://github.com
 					</a>
 				</dd>
+				<dt>Microsoft Docs</dt>
+				<dd>
+					<a href="https://docs.microsoft.com/en-us/users/christopher-0638/" title="microsoft docs" target="_blank">
+						https://docs.microsoft.com
+					</a>
+				</dd>
+				<dt>Photopea</dt>
+				<dd>
+					<a href="https://www.photopea.com" title="photo pea" target="_blank">
+						https://www.photopea.com
+					</a>
+				</dd>
 				<dt>DevDocs</dt>
 				<dd>
 					<a href="https://devdocs.io/" title="dev docs" target="_blank">
