--- a/alt/cool_sites.html
+++ b/alt/cool_sites.html
@@ -621,6 +621,24 @@
 						https://www.photopea.com
 					</a>
 				</dd>
+				<dt>HackerRank</dt>
+				<dd>
+					<a href="https://www.hackerrank.com/dashboard" title="hacker rank" target="_blank">
+						https://www.hackerrank.com
+					</a>
+				</dd>
+				<dt>HackerRank</dt>
+				<dd>
+					<a href="https://www.programiz.com/dsa" title="programiz" target="_blank">
+						https://www.programiz.com/
+					</a>
+				</dd>
+				<dt>HackerRank</dt>
+				<dd>
+					<a href="https://regexr.com/" title="regexer" target="_blank">
+						https://regexr.com/
+					</a>
+				</dd>
 				<dt>DevDocs</dt>
 				<dd>
 					<a href="https://devdocs.io/" title="dev docs" target="_blank">
