Changed site titles

--- a/alt/cool_sites.html
+++ b/alt/cool_sites.html
@@ -627,13 +627,13 @@
 						https://www.hackerrank.com
 					</a>
 				</dd>
-				<dt>HackerRank</dt>
+				<dt>Programiz</dt>
 				<dd>
 					<a href="https://www.programiz.com/dsa" title="programiz" target="_blank">
 						https://www.programiz.com/
 					</a>
 				</dd>
-				<dt>HackerRank</dt>
+				<dt>Regexr</dt>
 				<dd>
 					<a href="https://regexr.com/" title="regexer" target="_blank">
 						https://regexr.com/
