--- a/alt/cool_sites.html
+++ b/alt/cool_sites.html
@@ -621,6 +621,12 @@
 						https://www.photopea.com
 					</a>
 				</dd>
+				<dt>W3 Schools</dt>
+				<dd>
+					<a href="https://my-learning.w3schools.com/" title="W3 schools" target="_blank">
+						https://www.w3schools.com/
+					</a>
+				</dd>
 				<dt>HackerRank</dt>
 				<dd>
 					<a href="https://www.hackerrank.com/dashboard" title="hacker rank" target="_blank">
