--- a/alt/cool_sites.html
+++ b/alt/cool_sites.html
@@ -615,6 +615,10 @@
 						https://docs.microsoft.com
 					</a>
 				</dd>
+				<dt>Java 18 SE</dt>
+				<a href="https://docs.oracle.com/en/java/javase/18/docs/api/index.html" title="java docs" target="_blank">
+					https://docs.oracle.com
+				</a>
 				<dt>Photopea</dt>
 				<dd>
 					<a href="https://www.photopea.com" title="photo pea" target="_blank">
